--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <table cellspacing="20">  
-            <td> <img src="/images/philip.png" alt="Philip"></td>
+            <td> <img src="images/philip.png" alt="Philip"></td>
             <td><h1>Philip Cheang</h1>
                 <p><em>CEO of <strong><a href="https://www.linkedin.com/in/philip-cheang-814238254/">Jacqui Cleaners</a></strong>.</em></p></em></strong>
                 <p> I'm a front end web developer</p></td>
